examples/test/testpolicy15017.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15017
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key4: value41
      key8: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value3
          key27: value23
      podSelector:
        matchLabels:
          key3: value2
          key16: value40
          key8: value27
